--- a/Web.config
+++ b/Web.config
@@ -22,7 +22,11 @@
         </sectionGroup>
       </sectionGroup>
     </configSections>  
-    <appSettings/>
+    <appSettings>
+    <clear/>
+     <add key="dev" value="Data Source=.;Initial Catalog=Development;  Integrated Security=SSPI;Connection Timeout=1200"/>
+    <add key="AppVersion" value="Collection v.1.22.4"/>
+  </appSettings>
     <connectionStrings/>
     <system.web>
         <!-- 
